MkAuthToken updated